[package]
name = "csa"
version = "0.5.0"
authors = ["nozaq"]
description = "A Shogi game serialization/deserialization library in CSA format."
keywords = ["shogi", "csa", "parser"]
categories = ["game-engines"]
repository = "https://github.com/nozaq/csa-rs"
documentation = "http://nozaq.github.io/csa-rs"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
chrono = "0.4"
nom = "5"

[badges]
travis-ci = { repository = "nozaq/csa-rs" }
appveyor = { repository = "nozaq/csa-rs" }
