[package]
name = "csa"
version = "0.6.1"
authors = ["nozaq"]
description = "A Shogi game serialization/deserialization library in CSA format."
keywords = ["shogi", "csa", "parser"]
categories = ["game-engines"]
repository = "https://github.com/nozaq/csa-rs"
documentation = "http://nozaq.github.io/csa-rs"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
time = { version = "0.3.5", features = ["formatting", "std"] }
nom = "6"

[badges]
travis-ci = { repository = "nozaq/csa-rs" }
appveyor = { repository = "nozaq/csa-rs" }
